--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ exclude = [
     "_build",
     "build",
     "dist",
-    ".ipynb",
+    "*.ipynb",
 ]
 
 [tool.ruff.lint]
@@ -77,5 +77,4 @@ ignore = ["E501"]
 [tool.ruff.format]
 docstring-code-format = true
 docstring-code-line-length = 20
-
 
