--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ platforms = ["linux-64"]
 [tool.pixi.tasks]
 lint = "pre-commit run --all-files"
 test = "pytest"
+docker-build = "docker build --progress=plain -t mtg-ai:latest ."
+docker-run = "docker run --gpus all -p 8888:8888 mtg-ai:latest"
 
 [tool.pixi.environments]
 default = { solve-group = "default" }
