Add targets to dockerfile for web servers
Add Dockerfile stages and update compose.yaml for web servers.

* **Dockerfile Changes**
  - Add a new stage for `mtg_ai_rag_webserver` with port 8000 exposed and command to run the server.
  - Add a new stage for `mtg_ai_webserver` with port 8080 exposed and command to run the server.

* **Compose.yaml Changes**
  - Add a new service for `mtg_ai_webserver` using the corresponding stage from the Dockerfile.
  - Add a new service for `mtg_ai_rag_webserver` using the corresponding stage from the Dockerfile.

* **Pyproject.toml Changes**
  - Add pixi run tasks for `mtg_ai_webserver` and `mtg_ai_rag_webserver`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/TomMeyer/mtg-combo-ai/tree/feature/webapp?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/compose.yaml
+++ b/compose.yaml
@@ -33,3 +33,23 @@ services:
       - "8000:8000"
     depends_on:
       - text-generation-inference
+
+  mtg_ai_webserver:
+    build:
+      context: .
+      dockerfile: dockerfile
+      target: mtg_ai_webserver
+    ports:
+      - "8080:8080"
+    depends_on:
+      - text-generation-inference
+
+  mtg_ai_rag_webserver:
+    build:
+      context: .
+      dockerfile: dockerfile
+      target: mtg_ai_rag_webserver
+    ports:
+      - "8888:8888"
+    depends_on:
+      - text-generation-inference
