--- a/compose.yaml
+++ b/compose.yaml
@@ -1,22 +1,53 @@
-version: '3.8'
-
 services:
   text-generation-inference:
     image: ghcr.io/huggingface/text-generation-inference:latest
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    # deploy:
+      # resources:
+      #   reservations:
+      #     devices:
+      #       - driver: nvidia
+      #         count: all
+      #         capabilities: [gpu]
     shm_size: '1gb'
     ports:
-      - "8080:80"
+      - "9000:9000"
+    networks:
+      - backend
     environment:
-      - MODEL_ID=${model}
-      - LORA_ADAPTERS=${adapter}
+      - MODEL_ID=meta-llama/Llama-3.2-1B-Instruct
+      # - LORA_ADAPTERS=${adapter}
+      - HF_TOKEN=${HUGGINGFACE_TOKEN}
       - QUANTIZE=bitsandbytes-nf4
+
+  mtg_ai_rag_webserver:
+    image: mtg-ai-rag-webserver:latest
+    ports:
+      - "8889:8889"
+    networks:
+      - backend
+    depends_on:
+      - text-generation-inference
+
+  mtg_ai_webserver:
+    image: mtg-ai-webserver:latest
+    ports:
+      - "8080:8080"
+    networks:
+      - backend
+    depends_on:
+      - text-generation-inference
+
+  chat-ui:
+    image: ghcr.io/huggingface/chat-ui-db:latest
+    ports:
+      - "3000:3000"
+    networks:
+      - backend
+    env_file:
+      - path: ./chat-ui-env.local
+    # environment:
+    volumes:
+      - chat-ui:/data
 
   nginx:
     image: nginx:latest
@@ -26,30 +57,21 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - text-generation-inference
+      - mtg_ai_webserver
+      - mtg_ai_rag_webserver
+    networks:
+      - backend
+      - frontend
 
-  haystack-ai:
-    image: deepset/haystack:latest
-    ports:
-      - "8000:8000"
-    depends_on:
-      - text-generation-inference
+networks:
+  backend:
+    internal: true
+  
+  frontend:
+    internal: false
+  
 
-  mtg_ai_webserver:
-    build:
-      context: .
-      dockerfile: dockerfile
-      target: mtg_ai_webserver
-    ports:
-      - "8080:8080"
-    depends_on:
-      - text-generation-inference
+volumes:
+  chat-ui:
 
-  mtg_ai_rag_webserver:
-    build:
-      context: .
-      dockerfile: dockerfile
-      target: mtg_ai_rag_webserver
-    ports:
-      - "8888:8888"
-    depends_on:
-      - text-generation-inference
+
