--- a/nginx.conf
+++ b/nginx.conf
@@ -5,20 +5,20 @@ events {
 }
 
 http {
-    upstream mtg_ai_webserver {
-        server mtg_ai_webserver:8080;
-    }
+    # upstream mtg_ai_webserver {
+    #     server mtg_ai_webserver:8080;
+    # }
 
-    upstream mtg_ai_rag_webserver {
-        server mtg_ai_rag_webserver:8889;
-    }
+    # upstream mtg_ai_rag_webserver {
+    #     server mtg_ai_rag_webserver:8080;
+    # }
 
-    upstream text_generation_inference_webserver {
-        server text_generation_inference_webserver:9000;
-    }
+    # upstream text_generation_inference_webserver {
+    #     server text-generation-inference:8888;
+    # }
 
     upstream chat_ui_webserver {
-        server chat_ui_webserver:3000;
+        server chat-ui:3000;
     }    
 
     server {
@@ -32,21 +32,21 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /ai {
-            proxy_pass http://mtg_ai_webserver;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        # location /ai {
+        #     proxy_pass http://mtg_ai_webserver;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
 
-        location /rag {
-            proxy_pass http://mtg_ai_rag_webserver;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        # location /rag {
+        #     proxy_pass http://mtg_ai_rag_webserver;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
 
     }
 }
