--- a/nginx.conf
+++ b/nginx.conf
@@ -5,19 +5,19 @@ events {
 }
 
 http {
-    # upstream mtg_ai_webserver {
-    #     server mtg_ai_webserver:8080;
-    # }
+    upstream mtg-ai-webserver {
+        server mtg-ai-webserver:8080;
+    }
 
-    # upstream mtg_ai_rag_webserver {
-    #     server mtg_ai_rag_webserver:8080;
-    # }
+    upstream mtg-ai-rag-webserver {
+        server mtg-ai-rag-webserver:8080;
+    }
 
     # upstream text_generation_inference_webserver {
     #     server text-generation-inference:8888;
     # }
 
-    upstream chat_ui_webserver {
+    upstream chat-ui-webserver {
         server chat-ui:3000;
     }    
 
@@ -25,28 +25,29 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://chat_ui_webserver;
+            proxy_pass http://chat-ui-webserver;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # location /ai {
-        #     proxy_pass http://mtg_ai_webserver;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        location /v1 {
+            proxy_pass http://mtg-ai-webserver;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-        # location /rag {
-        #     proxy_pass http://mtg_ai_rag_webserver;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        location /rag {
+            proxy_pass http://mtg-ai-rag-webserver;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
 
     }
 }
