--- a/compose.yaml
+++ b/compose.yaml
@@ -15,30 +15,39 @@ services:
       - MODEL_ID=meta-llama/Llama-3.2-1B-Instruct
       # - LORA_ADAPTERS=${adapter}
       - HF_TOKEN=${HUGGINGFACE_TOKEN}
-      - QUANTIZE=bitsandbytes-nf4
+      - PORT=8080
+      # - QUANTIZE=bitsandbytes-nf4
+    volumes:
+      - llm-model:/data
 
-  mtg_ai_rag_webserver:
+  mtg-ai-rag-webserver:
     image: mtg-ai-rag-webserver:latest
     networks:
       - backend
+    volumes:
+      - ./src/mtg_ai_rag_webserver:/home/appuser/mtg-ai/src/mtg_ai_rag_webserver
     depends_on:
       - text-generation-inference
 
-  mtg_ai_webserver:
+  mtg-ai-webserver:
     image: mtg-ai-webserver:latest
     networks:
       - backend
     depends_on:
       - text-generation-inference
+      - mtg-ai-rag-webserver
+    volumes:
+      - ./src/mtg_ai_webserver:/home/appuser/mtg-ai/src/mtg_ai_webserver
 
   chat-ui:
     image: ghcr.io/huggingface/chat-ui-db:latest
     networks:
       - backend
-    env_file:
-      - path: ./chat-ui-env.local
+    # env_file:
+      # - path: ./chat-ui-env.local
     volumes:
       - chat-ui:/data
+      - ./chat-ui-env.local:/app/.env.local
 
   nginx:
     image: nginx:latest
@@ -48,8 +57,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - text-generation-inference
-      - mtg_ai_webserver
-      - mtg_ai_rag_webserver
+      - mtg-ai-webserver
+      - mtg-ai-rag-webserver
       - chat-ui
     networks:
       - backend
@@ -65,5 +74,6 @@ networks:
 
 volumes:
   chat-ui:
+  llm-model:
 
 
